Multiple major additions. Ideas are not grouped into pairs with bracket number as bootstrap card title. Many style tweaks to align content to fixed height container, dealt with text overflow, centerd buttons. Styled main title too.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+/***********************************************/
+/* Global Variables ****************************/
 :root {
   --dark-black: #202020;
   --dark-gray: #575757;
@@ -7,6 +9,10 @@
   --highlight-color: #C5E99B;
   --darker-green: #8FBC94;
 }
+
+
+/***********************************************/
+/* General *************************************/
 
 html, body {
   padding: 0;
@@ -22,6 +28,9 @@ a:hover {
   color: var(--highlight-color)
 }
 
+
+/***********************************************/
+/* Navbar **************************************/
 #navbar {
   background-color: var(--secondary-purple);
 }
@@ -29,6 +38,10 @@ a:hover {
 .logo {
   margin: 0;
 }
+
+
+/***********************************************/
+/* Think ***************************************/
 
 .new-think {
   background-color: var(--accent-color-teal);
@@ -47,9 +60,48 @@ a:hover {
   background-color: var(--primary-green);
 }
 
+
+/***********************************************/
+/* Sync ****************************************/
+
+.sync-title {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-top: 1.5em;
+}
+
 .idea-bracket {
   border-radius: 1em;
   filter: drop-shadow(0px 0px 6px #000000);
+}
+
+/* .idea-bracket-card {
+  
+} */
+
+.idea-bracket-text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 90%;
+  padding: 0.5em;
+
+  /* The following cuts the text off if too long for container: */
+  height: 10em;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.idea-bracket-pair-container {
+  padding: 0em;
+  margin: 0;
+}
+
+.idea-bracket-pair {
+  background-color: var(--dark-gray);
+  border-radius: 0.3em;
+  margin: 0.2em;
+  padding-bottom: 0.5em;
 }
 
 .idea-button {
@@ -68,6 +120,10 @@ a:hover {
   background-color: var(--secondary-purple);
   box-shadow: 0px 0px 15px 1px #05faf6;
 }
+
+
+/***********************************************/
+/* Footer **************************************/
 
 .footer {
   background-color: var(--dark-gray);
